fix | AiLogAnalysisService List.of(null) NPE：改用 Arrays.asList